2005-04-29 François Proulx <francois.proulx@gmail.com>
	* Removed all inline unuseful javascript code on submit buttons onclick='submit()'
	* This conflicted with the actual click on the submit button in Safari
	* Fixed check in Network for isOwner, only check superAdmin
	* Fixed bug so you can't add an existing content group to itself ( deadlock )
	* Started coding Pattern language narrative display

2005-04-29 François Proulx <francois.proulx@gmail.com>
	* Wrote User.php addcontent, removeContent, getAllContent()
	* Wrote Content.php subscrite() and unsubscribe()
	* Added parameters to getAllContent() in Node and Network ( exclude_subscribed_content )
	* These will be used for subscribing a to some content
	* Pattern Language will be the first to use it
	* Online users lists
	* Fixed bugs in Node and Network ( isOwner check )
	
2005-04-28 François Proulx <francois.proulx@gmail.com>
	* Logout button build a query string containing gw_id, gw_address, gw_port ( if available ), so that a user at a physical hotspot will get the login page from the hotspot he is.
	* Fixed but in Locale ( did not propertly set the locale in the session )
	
2005-04-28 François Proulx <francois.proulx@gmail.com>
	* Added check in MainUI toolbar so that it won't show "NOT logged in ?" message when connect to a real hotspot ( not virtual )
		* This message confused many users ( they clicked and got the virtual login instead ! )
	* Hide adminstration features ( statistics, hotspot creation, network wide content etc...) from all but Super admins
	* Fixed getAllLocativeArtisticContent in Node.php added is_persistent check
	* Added $associate_existing_content parameter to processNewContentUI to allows reuse for existing content ( in ContentGroup )
	* Fixed bug in FlickrPhotoStream delete ( missing return from parent )
	* Added security check in all content classes ( ProcessAdminUI )
	
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* Replaced show only content groups by show persistent